tests/new_bad_type_arg_value.stderr
tests/new_bad_type_arg_value.sl:80:81: error: unknown type
