tests/new_bad_type_arg_value.sl
fn main() i32 {
    var ma MemAllocator
    var t i32
    var p *i32 = new(&ma, t)
    return p as i32
}
